fix(ui): add better contrast on shine effect color
fix #523

--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -14,6 +14,7 @@
   }
 
   .shine {
-    @apply absolute top-0 left-0 h-full w-1/3 -translate-x-full -skew-x-20 bg-white/0 bg-gradient-to-r from-white/0 via-white/10 to-white/0 text-white/0;
+    @apply absolute top-0 left-0 h-full w-1/3 -translate-x-full -skew-x-20;
+    @apply bg-white/0 bg-gradient-to-r from-white/0 via-white/30 to-white/0 text-white/0 dark:via-white/10;
   }
 }
